--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 2.8.3)
 project(fusion)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
@@ -12,7 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
         eigen_conversions
         )
 
-
+list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
 find_package(Eigen3 REQUIRED)
 find_package (GeographicLib REQUIRED)
 
@@ -39,6 +39,7 @@ include_directories(
 ## Declare a C++ library
 add_library(${PROJECT_NAME}
         src/fusion_node.cpp
+        src/kalman_filter.cpp
         )
 
 ## Declare a C++ executable
@@ -49,4 +50,5 @@ set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_DEFINITIONS EIGEN_
 target_link_libraries(${PROJECT_NAME}_node
         ${PROJECT_NAME}
         ${catkin_LIBRARIES}
+        ${GeographicLib_LIBRARIES}
         )
